# ChangeLog for dev-python/python-keystoneclient
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-keystoneclient/ChangeLog,v 1.51 2015/04/15 07:43:12 ago Exp $

  15 Apr 2015; Agostino Sarubbo <ago@gentoo.org>
  python-keystoneclient-1.0.0-r1.ebuild:
  Stable for x86, wrt bug #546640

  15 Apr 2015; Agostino Sarubbo <ago@gentoo.org>
  python-keystoneclient-1.0.0-r1.ebuild:
  Stable for amd64, wrt bug #546640

*python-keystoneclient-1.0.0-r1 (14 Apr 2015)
*python-keystoneclient-1.0.0 (14 Apr 2015)

  14 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/keystoneclient-1.0.0-cve-2015-1852.patch,
  +python-keystoneclient-1.0.0-r1.ebuild, +python-keystoneclient-1.0.0.ebuild:
  backporting cve fix for fast stablization

*python-keystoneclient-1.3.0-r2 (14 Apr 2015)

  14 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/cve-2015-1852-master-keystoneclient.patch,
  +python-keystoneclient-1.3.0-r2.ebuild, -python-keystoneclient-0.11.0.ebuild,
  -python-keystoneclient-0.11.1.ebuild, -python-keystoneclient-0.11.2.ebuild,
  -python-keystoneclient-1.0.0.ebuild, -python-keystoneclient-1.1.0.ebuild,
  -python-keystoneclient-1.2.0.ebuild, -python-keystoneclient-1.3.0-r1.ebuild:
  fixing CVE-2015-1852

*python-keystoneclient-1.3.0-r1 (02 Apr 2015)

  02 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-1.3.0-r1.ebuild, -python-keystoneclient-1.3.0.ebuild:
  py 3.4 support :D

*python-keystoneclient-1.3.0 (27 Mar 2015)

  27 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-keystoneclient-1.3.0.ebuild:
  bup

  09 Mar 2015; Pacho Ramos <pacho@gentoo.org>
  python-keystoneclient-1.0.0.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org>
  python-keystoneclient-1.0.0.ebuild:
  amd64 stable, bug 540290

  28 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  python-keystoneclient-1.2.0.ebuild:
  fixing doc deps
