@@ -6,24 +6,23 @@ AUX keystoneclient-1.0.0-cve-2015-1852.patch 2648 SHA256 957022dc28449852a9ef40d
 DIST python-keystoneclient-1.0.0.tar.gz 314308 SHA256 6d960d2196efc7a181519a77f757a27ceeeac71f41f624318ae7f1088d2e6db4 SHA512 331d1f634c06f142628c6c641e49a75ca721eb6a37e11827b12db293eeef3e39e9565b38db27d9e39464ef80f5a6d1da2b4e0365dc2eba2b22f63abe0b2992fc WHIRLPOOL abd1173e4caf31ffdef01e7a5f13869dcea4d8c053805ec995b675a46350f2c2a8d5c6d692127a048690b018c3785dc005d6c752df86277dc04873a4daa19525
 DIST python-keystoneclient-1.3.0.tar.gz 338528 SHA256 c009445d9a36fa788a14b093f67501091b246fefccb30fb63925e6e4fbeaac04 SHA512 51fd09419479ed00a9bd1785c0bf08cd7ee5393cb2eabba02558cf9828cbd9070f671377d759ff3dda0b675846f22dc8bb7419443e0b850c26f3263cd3b9b533 WHIRLPOOL 4f134aaefe9353382ab78a74109c139df55f9275cc2d932eae5cd8764e74f3b608fcf5bcfb659ac14504d87e944494b6a0221051dcf82a21bec109ddefeda7bf
 EBUILD python-keystoneclient-1.0.0-r1.ebuild 3191 SHA256 9b4e7b93295c403b125332856daeba281ef15f3af408ba19e04fc0f02a58891c SHA512 c100a3ef9f7291ae714520d34a3825c5daf7008104e0aef8f0b8018b59b05a6e46dc60954b35bcdd1a02bedd7a5fdbd1a0f60e75ca2ec0b860c60105960f85fe WHIRLPOOL ddedada3ec2b4866fc03db152825edfae194a7264d7a5d1a4ec1a6d00481bd98dae6dec34ee42969b9928e59c82ebf3888e9cf59ca713bab372ef6f303e192cb
-EBUILD python-keystoneclient-1.0.0.ebuild 3098 SHA256 8b57a4850268d6752a59f2bdabe87ebd31fc7b47c688c2ce9b121edeeddb6211 SHA512 a1e965e9200dde35089290ff60e01bd2c54f37c922febd9a4ee263dda0deccb76d0e277f5da182125289c5b4eb51c233c1356710b2b7ff322209d7dbc3dc881a WHIRLPOOL 8b2aa61d9d509c0dd389d2e03d09308361289554f82a658f3ec12511415958edf6223a19e62941cd30ded49ba52d32e6c173a3e1bc2baee2c7e3548ab3b38e97
 EBUILD python-keystoneclient-1.3.0-r2.ebuild 3130 SHA256 81ae36d6bb1f5771d16f91a80999c0de63c3776316f2cfdd0cc32b58f49fc30c SHA512 36f6c0e18f14c2231085c63cd94f695767089a2a510d2e79c9017cbf8da93cd3ee82f94bdd6eda5e8c8bef6207db8aabb2663c1c2436c676648ff491959aedb1 WHIRLPOOL c6ba85116c8b6b4b8ec9ac6b704eb968559be8edb847c46365ae7ccc5ad1159281446d5a066dbdadf3d1014f299c323138f8bf64534c33d9056eeadf68ea8a12
-MISC ChangeLog 10966 SHA256 f219395493adf7b8973d87da633c07f848b137f0b177ec17e383ad5dd4a8491d SHA512 778dc6665761d178ff975ab6eb771ad952d88e44e6c525c295e9f6c3e04e3e91ed69e9c094ad05a8c5db608513056691952e1c1d3b6ee58a01ece19f166bf2c1 WHIRLPOOL 7b6fe11bf04bef75d857cc7aae0898ed13293697de9c9bd0515a0603050434532997bfb716f276e33fcfd066f941020bc55c64160747e73ebf8ccb03631efa8a
+MISC ChangeLog 11116 SHA256 715d82f4639149272caea081a6b525a22ea0c1fd06bf56014d35785feb6a19f4 SHA512 37cb6f4478fc30e74e8f0c46fcae05e661d3a8025c31da3f3e018b70eadf3fa32ae9d253ae1ceb8bbdec526e86081bf4ac316cba3748473f55778722c3a066c1 WHIRLPOOL 4866dc631923f6417ff224dc61ee555b4e3024f7554cb30050037669297bd9447e0cfc900da57d6f2ceb6cb9385640269f711c8817ccc268a63aaa985df78935
 MISC metadata.xml 368 SHA256 a91cef59b9f9006441eae6ac81afcf9efd4382762bcb6300f16046ba2851ce8d SHA512 6035564d5afb3100400c97ba1671a2ca65387a1fd67a77145ed3968c2ccadaa28eec54afa03b9ae67b1e69843275adbe92646dad8ffb9995d2270c85f94ca679 WHIRLPOOL 858f1f68eb57ac301bfa5bcf8db0f01853c5c1a612570f2e45a867fd16fddf84da77bff85441dec22df18634c56018874675d056f200e8336da9709d49d0ad48
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLhaQAAoJELp701BxlEWffaUQAKn3X2zgrRZX2DBUk8Bg2Rb2
-yjLtHZIoKdHnhOJrL3Pj/6m52Z7iY43R/oCvx069ZAkjFiVi6O9btz5BF0O5kYA1
-UgwpVW1Hav98JvWvDXtMg/+kZuYhyK1T6VfxnB2WqXCKghoPpp3pB+ilMNG+ttTl
-WVNxUMJuyxKU8GndWNjm4xozw0oQmveU0VDt1iBLcpEC5glHnxii/d6v/P4k+Ekf
-7GUQ4q8+11IQzwmC/+VUsuGNbv7V0NWCAkNgthPy7Uj47haGrkP/sr5MWUHc66FX
-i3g7RCUHdJlDQWjvjN91qKJyGGkS+iMsCT2/iwSxGPVY7xUd/8+XyAhc3mKnVC1j
-oMksIg0IgTSQH40PerJ65eKkS5ctOU8JZgf7S5Jy/mJ1zuKhw4hSCyH79Ka56JLy
-BhBdN03iZWXBQV/QrsNMf/WcsvhWKMaZtsgO9xSoQ4PvNFE3iiCKdhb24UDg5RZa
-bCRLnGCBuNEV+ct8kuofpgOsYE26D/GhwuZZzsMSQxNx5K3evF06kBkQOooRoOkc
-YvXhGDJUji8S8w2M1yI5iYsTmXnlOa/Wn6k9hfs1LcH6d4CjqDPIoxjDSEGF7U0k
-lCi2yxliFsFQlnvlg+pdE/KqWiSFj0etl7HNBPaIuWpYWFG9+XWUAwVAb1xe2x+B
-uYZf1DGEx23ZREpJ3Sgj
-=LA+K
+iQIcBAEBCAAGBQJVLx+uAAoJEGSje+quGaToqPMQAJxSTGSW1rUS2iv2ZcU0UcG0
+uv7QlS32X09YKSUoKS+mGXKx9uC0wdnq/YcMXDRmClcWEU1rDvGumEljrb6aE6cO
+GGVUK7UT+3iiI790pxYMCt+3B+XovEVPQFvSGN0cfCCPOsYB6vALdYNWmTRwynXA
+0hASolYnhq3NaYCIfbKL2QFXB3lwiLRmD6muhxZ0v/nkVbEmfsurQLjI1YAww4tp
+NfOTdfSCH7Adb8tJhJd6NcY8QE5/F1y7jy9sO+cyqRgtdsU999kbe1EM7xg6lQUs
+X4wIJxKFJ8vEl0W7XFV08cZZk6H2pcFwZvXT+nf9v/taPl5wxGCl23nKInZImP12
+v82dJvb6l6+SCdJ0+JxZyKebYGsETbmg/Cv3DmqWZKYyCJKYTb/29toopF5Fwvxy
+gxylY/mjtK9yZ5z3R+hT1/+CjU8ZCo0E86SsoweNd6iIkd8Sk+I+3NKxoZZ1CkG5
+WlOCUBQmfG6GUrK5DfZZhyVXhWeMn4gbFkpP9uLNq4o4ZTuvDXoV9CTWP+yG7TC2
+C0mtdliT0jdRLBnZ5tEi4ecYTf+yyRZo9x9b2OpRBmO2jKMlSfCZYWTcEggc++yd
+r0hwroRo7sRbHzkMz0TozgWnfVgyPBA9gMtaoFb/Tgc7VZObSA++1vY3jMg8aueo
+XpedKm4GzZvWKnjGAvBK
+=qzv2
 -----END PGP SIGNATURE-----
